2010-10-21  Alexander Kurtakov  <akurtako@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/doc/anttask/MediaWikiImageFetcher.java: Removed.
	* src/org/eclipse/linuxtools/internal/valgrind/doc/anttask/tasks.properties: Removed.
	* userguide/General-Usage.html: Removed.
	* userguide/images/CachegrindOptions.png: Removed.
	* userguide/images/CachegrindOutput.png: Removed.
	* userguide/images/Exportbuttonvalgrindview.gif: Removed.
	* userguide/images/exportbuttonvalgrindview.png: Removed.
	* userguide/images/hierarchy.gif: Removed.
	* userguide/images/MassifChartSelect.png: Removed.
	* userguide/images/MassifOptions.png: Removed.
	* userguide/images/MassifTable.png: Removed.
	* userguide/images/MassifTree.png: Removed.
	* userguide/images/MemcheckOptions.png: Removed.
	* userguide/images/MemcheckOutput.png: Removed.
	* userguide/images/Screenshot-ProfileConfigurations-valgrind-options-tab.png: Removed.
	* userguide/images/Screenshot-ProfileConfigurations.png: Removed.
	* userguide/images/Screenshot-Suppressions.png: Removed.
	* userguide/images/Shortcut.png: Removed.
	* userguide/images/SwitchCachegrind.png: Removed.
	* userguide/images/SwitchCoreTool.png: Removed.
	* userguide/images/SwitchMassif.png: Removed.
	* userguide/images/Thread.gif: Removed.
	* userguide/images/ValgrindExportWizard.png: Removed.
	* userguide/images/ValgrindSegfault.png: Removed.
	* userguide/Installing.html: Removed.
	* userguide/Special-Cases.html: Removed.
	* userguide/Updating-This-Document.html: Removed.
	* userguide/Using-Cachegrind.html: Removed.
	* userguide/Using-Massif.html: Removed.
	* userguide/Using-Memcheck.html: Removed.
	* userguide/Valgrind\ Reference-toc.xml: Removed.
	* userguide/Valgrind\ Reference.html: Removed.
	* userguide/Valgrind\ Reference.xml: Removed.
	* images/home.gif: New file.
	* images/next.gif: New file.
	* images/prev.gif: New file.
	* Linux_Tools_Project/Valgrind/User_Guide/General-Usage.html: New file.