@@ -7,4 +7,5 @@ bin.includes = plugin.xml,\
                about.html,\
                Linux_Tools_Project/,\
                images/,\
-               toc-doc.xml
+               toc-doc.xml,\
+               book.css
